src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Whole_Person_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if the program is a WP Solution.</inlineHelpText>
        <label>Whole Person Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Item_Category__c</fullName>
        <label>Item Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Item_Type__c</fullName>
        <label>NetSuite Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Item</fullName>
                </value>
                <value>
                    <fullName>Inventory Lot Numbered</fullName>
                </value>
                <value>
                    <fullName>Inventory Serialized</fullName>
                </value>
                <value>
                    <fullName>Non Inventory Purchase</fullName>
                </value>
                <value>
                    <fullName>Non Inventory ReSale</fullName>
                </value>
                <value>
                    <fullName>Non Inventory Sale</fullName>
                </value>
                <value>
                    <fullName>Service Purchase</fullName>
                </value>
                <value>
                    <fullName>Service ReSale</fullName>
                </value>
                <value>
                    <fullName>Service Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Sync_Err__c</fullName>
        <label>NetSuite Sync Error</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Push_To_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Term_Contract_Pricing_Type__c</fullName>
        <label>Term / Contract Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
    </listViews>
    <recordTypes>
        <fullName>Primary_Product</fullName>
        <active>true</active>
        <description>Primary product, such as Livongo for Diabetes</description>
        <label>Primary Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Secondary_Product</fullName>
        <active>true</active>
        <description>Secondary product, such as Upfront Meter</description>
        <label>Secondary Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>